# frk_act_unified

./: .gitignore  .gitmodules  CMakeLists.txt  DEPLOYMENT_GUIDE.md  README.md  RGB_ENCODING_ANALYSIS.md  STATUS_REPORT.md  activate_server_env.sh  package.xml  requirements.txt  start_local_server.sh  start_training_server.sh  test_act_client.py  train_act_distributed.py
act_algo/detr/: main.py
communication/: client_setup.sh  robot_config.yaml  server_setup.sh
configs/: act_config.yaml  robot_config.yaml
deploy/: client_setup.sh  server_setup.sh
docs/: act要求.txt  energy_tank_implementation.md  frk_act_重构计划.md  problem_analysis.md  shortcmoing.md  学习记录.txt  旧版本算法逻辑和要求.md  渐进构建计划.md  移植dcmt.txt  统一DS控制器使用说明.md
docs/admm/: 2.md  Real-Time Deformable-Contact-Aware MPC.markdown  admm_implementation_plan.md  软接触.md
docs/energytank/: An Energy Tank-Based Interactive Control Architecture for Robotic Surgery.markdown  Passive Hierarchical Impedance Control Via Energy Tanks.markdown  Unified Passivity-Based Cartesian Force_Impedance Control for Rigid and Flexible Joint Robots via Task-Energy Tanks.markdown
docs/frkdocs/: Franka Control Interface Specifications.markdown  force_sensor_optimization_summary.md  franka_ros Documentation.markdown  libfranka Documentation.markdown
docs/力传感器/: M4313MXB Users' Manual V1.markdown  M8128 Users' Manual V2.markdown  forcesenseRead.py
docs/力位混合/: Hybrid_Force-Impedance_Control.markdown  SE(3)上机器人机械手统一力-阻抗控制的几何公式.md  unified force impedence control.md  接触任务中的运动和力生成：一种动力学系统方法.md
launch/: franka_grasping_simulation.launch
robot_client/: ACT_ACTION_LABEL_FIX_README.md  test_act_data_recording.py  test_act_inference.sh
robot_client/client_scripts/: automated_data_collection.sh
robot_client/client_scripts/test/: simple_client_test.py
robot_client/data_record/: automated_data_collection.sh  extract_act_videos.py  franka_act_dataset_recorder.py  franka_impedance_grasping_controller.py  validate_act_dataset.py
robot_client/inference_sim/: franka_act_inference_controller.py
robot_client/launch/: franka_act_inference.launch  franka_grasping_record.launch
robot_env/: franka_act_env.py
robot_server/: model_validate.py  start_inference_server.sh  start_training.sh  test_server.py
robot_server/act_algo_train/: README.md  franka_constants.py  imitate_episodes.py  policy.py  utils.py
robot_server/act_algo_train/detr/: main.py
robot_server/communication/: act_server.py  client_setup.sh
robot_server/configs/: act_config.yaml
robot_server/inference/: README_INFERENCE.md  act_inference.py
scripts/: franka_impedance_grasping_controller.py  setup_project.sh  start_act_server.sh  start_franka_client.sh
scripts/test/: simple_server_test.py
(+1 files in other folders)
