<?xml version="1.0"?>
<package format="2">
  <name>frk_act_unified</name>
  <version>1.0.0</version>
  <description>Unified ACT implementation for Franka robot with grasping simulation</description>
  
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>franka_msgs</depend>
  <depend>franka_gripper</depend>
  <depend>actionlib_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>franka_gazebo</depend>
  <depend>franka_example_controllers</depend>

  <export>
  </export>
</package>
